--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
-Hello world
-</body>
+	<head> <link rel="stylesheet" type="text/css" href="index.css">
+			<title></titlle>
+	</head>
+	<body>
+		Hello world
+	</body>
 </html>
