--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head> <link rel="stylesheet" type="text/css" href="index.css">
-			<title></titlle>
+			<title>'You are what you eat'</titlle>
 	</head>
 	<body>
 		Hello world
