--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head> <link rel="stylesheet" type="text/css" href="index.css">
-			<title>'You are what you eat'</titlle>
+			<title>You are what you eat</titlle>
 	</head>
 	<body>
-		Hello world
+		<h1> Your health is more precious than Gold </h1>
+		
 	</body>
 </html>
