--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
-	<head> <link rel="stylesheet" type="text/css" href="index.css">
-			<title>You are what you eat</titlle>
+	<head> 
+		<link rel="stylesheet" type="text/css" href="index.css">
+		<title>You are what you eat</title>
 	</head>
 	<body>
-		<h1> Your health is more precious than Gold </h1>
+		<div>
+			<h1> Your health is more precious than Gold </h1>
+			<p>This sole purpose of the website is to teach you all you need to know about looking after your health. Good health allows you to make the most out of life ! </p>
+		</div>
+		<div id='Enter' class='nav'> 
+		<a href="#Enter">Enter </a>
 		
+		</div>
+
+
 	</body>
 </html>
