--- a/index.html
+++ b/index.html
@@ -1,19 +1,65 @@
 <!DOCTYPE html>
-<html>
-	<head> 
+
+<html lang="en">
+
+	<head> <meta name="viewport" content="width=device-width, initial-scale=1">
+		<style>
+		div.fixed {
+    	position: fixed;
+   		bottom:3;
+    	right: 1;
+    	}
+    	.center {
+    	text-align: center;
+    	margin: auto;
+    	width: 70%;
+    	}
+   
+ 
+		</style>
 		<link rel="stylesheet" type="text/css" href="index.css">
+	
 		<title>You are what you eat</title>
 	</head>
-	<body>
-		<div>
-			<h1> Your health is more precious than Gold </h1>
-			<p>This sole purpose of the website is to teach you all you need to know about looking after your health. Good health allows you to make the most out of life ! </p>
-		</div>
-		<div id='Enter' class='nav'> 
-		<a href="#Enter">Enter </a>
-		
-		</div>
+	
+	<body class='center'>
+			<div>
+			<h1><font color="green">Your health is more precious than Gold!</font></h1>
+			
+			<p>This sole purpose of the website is to teach you all you need to know about looking after your health. Good health allows you to make the most out of life. </p>
 
+			<p2>
+			
+			<ul>
+
+			Did you know that....
+
+			<li> Just like your car, your brain needs quality fuel to run efficiently. One study found that eating unhealthy foods puts you at a 66 percent increased risk of productivity loss. Eating a healthy, balanced diet to make sure your brain has the fuel it needs means more energy and increased productivity at work.</li>
+			
+			<li> What we eat has an impact on our brains. Did you know bananas contain 10 milligrams of dopamine, a chief mood booster in the brain? Dark chocolate, packed with polyphenol, is also known to boost serotonin, a neurotransmitter that many antidepressants also target. You should see a doctor if you&rsquo;re seriously concerned about your moods, but for the rare gloomy day, try a dark-chocolate covered banana. </li>
+
+			<li> Certain foods have the ability to moderate our body&rsquo;s level of cortisol, the stress hormone. Some studies have found that foods packed with vitamin C, omega&#8208;3 fatty acids and magnesium help reduce cortisol levels. When the body is in a chronic state of stress, it breaks down protein to prepare for battle. Eating a protein&#8208;rich diet, including fish and dairy, can help replenish protein stores and keep cortisol levels at bay.</li>
+
+			<li> Unhealthy eating, especially over the long term can be a risk factor for chronic diseases such as cancer, diabetes, obesity and heart disease. If you miss out on too much of the protein, vitamins and minerals that your body needs, your muscle mass will decrease as your fat stores increase. Some estimates say at least 30% of cancers are linked to poor diet. One study of over 6,000 women found that those who ate the most cabbage, turnips, broccoli, cauliflower and kale had a lower risk of developing breast cancer after menopause.</li>
+
+			<li> Healthy eating can help you avoid diseases that may lower your life expectancy. One study showed that a diet of fruit and vegetables, in combination with exercise, extended life expectancy for women in their 70s. Elsewhere, researchers reviewed a group of studies that suggest vegetarian or low-meat diets could help you live a longer life. And another study points to nuts as a way to reduce your risk of early death. No matter how you cut it, a healthy diet can play an important role in how long you&rsquo;ll live.</li>
+
+			<li> Many of the benefits of healthy eating contribute to potential savings. If you stay healthy, you&rsquo;ll have fewer medical bills to pay and by cutting back on food, you&rsquo;ll eat less and have fewer groceries to purchase. Save your body and your wallet and eat your greens today.</li>
+
+			<li> Why pay for expensive and painful Botox procedures when you can improve your skin through your diet? Fruits and vegetables high in antioxidants can help protect your skin. The antioxidants in fresh berries and salmon&rsquo;s omega&#8208;3 fatty acids both help improve the health of your skin&rsquo;s cells and slow premature aging.</li>
+
+			</ul>
+			</p2>
+			</div>
+
+			<div id='enter button' > 
+			<button type="submit">Recipes</button>
+			</div>
+
+			<div class='center'>
+			<img src="weh.jpg" alt="mountain view" style="width:304px; height 228px;">
+			</div>
+			
 
 	</body>
 </html>
